--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
 	<link href="css/style.css" rel="stylesheet">
 </head>
 <body ng-app = "xpApp">
-<div class="container" ng-controller="xpController">
+<div class="container" ng-controller="playerController">
 	<h2>LoopBack XP Application</h2>
 	<div class="row">
 		<div class="col-md-4">
